--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,4 +1,4 @@
-.copyrgiht__creator {
+.copyright__creator {
   font-weight: $font-bold;
   font-size: 19px;
   line-height: 18px;
@@ -46,7 +46,7 @@
     padding-top: 32px;
   }
 
-  .copyrgiht__creator {
+  .copyright__creator {
     padding-left: 80px;
   }
 
@@ -57,7 +57,7 @@
 }
 
 @media (min-width: $desctop-width) {
-  .copyrgiht__creator {
+  .copyright__creator {
     padding-right: 57px;
     padding-left: 0;
   }
