--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -102,7 +102,9 @@
   }
 
   .advantages__title {
-    padding-top: 43px;
+    position: relative;
+    left: -5px;
+    padding-top: 47px;
     font-size: 43px;
     line-height: 50px;
   }
@@ -122,7 +124,7 @@
 
     &:nth-child(1) {
       order: 1;
-      margin-top: 20px;
+      margin-top: 16px;
     }
 
     &:nth-child(2) {
@@ -137,7 +139,7 @@
 
     &:nth-child(4) {
       order: 2;
-      margin-top: 25px;
+      margin-top: 21px;
     }
 
     &:nth-child(5) {
@@ -183,7 +185,9 @@
   }
 
   .advantages__title {
+    padding-top: 43px;
     padding-left: 170px;
+    left: 0;
     font-size: 53px;
     line-height: 57px;
     padding-bottom: 3px;
